--- a/styles.css
+++ b/styles.css
@@ -69,5 +69,16 @@ body, header, ul {
   .nav-links ul li a:hover {
     text-decoration: underline;
   }
+  .main{
+    width: 100%;
+    height: 400px;
+    background-color: #0a0a23;
+    color: gold;
+    text-align: center;
+    padding-top: 20px;
+  }
+  .main h2,h3{
+    font-size: 20px;
+  }
   
   
